[gd_scene load_steps=18 format=3 uid="uid://bjvqssei4afw6"]

[ext_resource type="Script" uid="uid://s6fyqcquj2hm" path="res://scene/ui/end_screen.gd" id="1_vhmv7"]
[ext_resource type="Texture2D" uid="uid://xmq2ch1r8iat" path="res://assets/3123.png" id="2_7brdy"]
[ext_resource type="Texture2D" uid="uid://3ereqe37g0bj" path="res://assets/—è.png" id="2_8i563"]
[ext_resource type="Texture2D" uid="uid://cefkstqrr5d8o" path="res://assets/Sprite-00012.png" id="3_5jjq7"]
[ext_resource type="Texture2D" uid="uid://dgp41xklcy1vs" path="res://assets/Sprite-0001.png" id="4_h1pmk"]
[ext_resource type="PackedScene" uid="uid://dm0ka7mrwvv8n" path="res://scene/ui/sound_button.tscn" id="6_5jjq7"]
[ext_resource type="AudioStream" uid="uid://bglyqckskx6or" path="res://assets/audio/jingles/victory.mp3" id="7_lnfaa"]
[ext_resource type="AudioStream" uid="uid://7wsqgmh4ffci" path="res://assets/audio/jingles/lost.mp3" id="8_ba8sa"]

[sub_resource type="Animation" id="Animation_icf4o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_bkjao"]
resource_name = "in"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_dhr2n"]
resource_name = "out"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fqffh"]
_data = {
&"RESET": SubResource("Animation_icf4o"),
&"in": SubResource("Animation_bkjao"),
&"out": SubResource("Animation_dhr2n")
}

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lnfaa"]
texture = ExtResource("2_7brdy")
texture_margin_left = 3.0
texture_margin_top = 3.0
texture_margin_right = 3.0
texture_margin_bottom = 3.0
region_rect = Rect2(0, 0, 16, 16)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ba8sa"]
texture = ExtResource("3_5jjq7")
texture_margin_left = 3.0
texture_margin_top = 3.0
texture_margin_right = 3.0
texture_margin_bottom = 3.0
region_rect = Rect2(0, 0, 16, 16)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dbs7a"]
texture = ExtResource("4_h1pmk")
texture_margin_left = 3.0
texture_margin_top = 3.0
texture_margin_right = 3.0
texture_margin_bottom = 3.0
region_rect = Rect2(0, 0, 16, 16)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2gxxf"]
texture = ExtResource("2_8i563")
texture_margin_left = 16.0
texture_margin_top = 26.0
texture_margin_right = 18.0
texture_margin_bottom = 21.0
region_rect = Rect2(3, 1, 58, 61)

[sub_resource type="Theme" id="Theme_rxj2w"]
Button/colors/font_color = Color(1, 1, 1, 1)
Button/colors/font_outline_color = Color(0.133196, 0.133196, 0.133196, 1)
Button/colors/font_pressed_color = Color(0.81, 0.81, 0.81, 1)
Button/constants/outline_size = 4
Button/styles/hover = SubResource("StyleBoxTexture_lnfaa")
Button/styles/normal = SubResource("StyleBoxTexture_ba8sa")
Button/styles/pressed = SubResource("StyleBoxTexture_dbs7a")
PanelContainer/styles/panel = SubResource("StyleBoxTexture_2gxxf")

[node name="EndScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_vhmv7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_fqffh")
}
autoplay = "in"

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.0495, 0.118175, 0.345098)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(200, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_rxj2w")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="NameLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 4
text = "Game Over"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RestartButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("6_5jjq7")]
layout_mode = 2
theme_override_constants/outline_size = 4
text = "Restart"

[node name="QuitButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("6_5jjq7")]
layout_mode = 2
theme_override_constants/outline_size = 4
text = "Quit"

[node name="VictorySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_lnfaa")
volume_db = -15.0
bus = &"SFX"

[node name="DefeatSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_ba8sa")
volume_db = -15.0
bus = &"SFX"

[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
